# fastfec

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  Tupfile  _config.yml  bits.c  bits.h  bits.tup  bits_fnv1a.h  bits_fnv_test.c  bits_test.c  bootstrap.py  bootstrap.sh  default.nix  ffec.c  ffec.h  ffec.tup  ffec_int.c  ffec_int.h  ffec_matrix.c  ffec_matrix.h  ffec_multi.c  ffec_rand.h  ffec_test.c  ffec_test_run.sh  fnv.c  fnv1a.c  fnv1a.h  fnv1a_test.c  hydra.nix  irequire.py  meson.build  meson_options.txt  mfec.c  mfec.h  mfec_test.c  nfec.c  (+6 more)
WrapDB/: nonlibc.wrap
_layouts/: default.html
benchmark/: 2017-07-13.3f7372d.bad-t1.bench.json  2017-07-13.dbce57d.bad-t1.bench.json  2017-07-13.dbce57d6.bad-t1.bench.json  2017-07-21.cda0d01.bad-t1.bench.json  2017-07-22.2fb644f.bad-t2.bench.json  2017-07-22.371122f.bad-t1.bench.json  2017-07-23.640561c.bad-t1.bench.json  2017-07-23.640561c.bad-t2.bench.json  d06a8cc5.bench.json  ffec_bench.py  ffec_benchmark.sh  meson.build  test
benchmark/test_run_2016_09_21/: ffec_test_ratios_vector.csv
doc/: nfec mem layout.xls
docs/: TODO.md  documentation.md  hacking_tips.md  meson.build
include/: atop.h  b2hx.h  ffec.h  ffec_inlines.h  ffec_int.h  ffec_internal.h  ffec_matrix.h  fnv.h  hx2b.h  lifo.h  meson.build  nlc_urand.h  nmath.h  nmem.h  nonlibc.h  npath.h  pcg_rand.h  stack.h  zed_dbg.h
man/: fnvsum.md  meson.build  ncp.md
nfec/: README.md  mfec.c  mfec.h  mfec_test.c  nfec.c
nonlibc/: default.src.json
src/: b2hx.c  ffec.c  ffec_decode.c  ffec_encode.c  ffec_init_matrix.c  ffec_int.c  ffec_matrix.c  ffec_rand.c  ffec_utils.c  ffec_xor.c  fnv.c  hx2b.c  lifo.c  meson.build  nmem.c  nmem_bsd.c  nmem_linux.c  npath.c  pcg_rand.c  stack.c  swap.c
subprojects/: README.md
subtree/nonlibc/: README.md
subtree/nonlibc/include/: atop.h  fnv.h  meson.build  nmath.h  pcg_rand.h  zed_dbg.h
subtree/nonlibc/test/: atop_test.c  meson.build  nmath_test.c  stack_test.c
test/: .meson.build.swo  .meson.build.swp  atop_test.c  bits_test.c  ffec_test.c  fnv_test.c  hex2bin2hex_test.c  lifo_test.c  meson.build  nlc_urand_test.c  nmath_test.c  npath_test.c  pcg_rand_test.c  stack_test.c  zed_dbg_test.c
test_files/: fnv1a_test.c  zed_dbg_test.c
test_run_2016_09_21/: ffec_test_dec_speed.csv  ffec_test_enc_speed.csv  ffec_test_inefficiency.csv  ffec_test_sizes_vector.csv
toolchain/: cross_arm.txt  nonlibc.wrap
util/: fnvsum.c  meson.build  ncp.c  test_fnvsum.py  test_ncp.py
